# opengl-implicit4

./: .gitignore  README.md  opengl-implicit4.cabal  stack.yaml
C/: .gitignore  cirque.c  cirque.h  connComps.c  connComps2.c  connComps3.c  marchingCubes.c  utils.c
hsc/: Edges.hs  Edges.hsc  connComps.h
src/: BanchoffChmutov.hs  BanchoffChmutovSmooth.hs  BarthSextic.hs  Bretzel5.hs  Bretzel5Colored.hs  Bretzel5Smooth.hs  CubeOctahedron.hs  Cyclide.hs  Decocube.hs  DecocubeSmooth.hs  Enzensberger.hs  Goursat.hs  GoursatColored.hs  KleinBottle.hs  KohnNirenberg.hs  KusnerSchmitt.hs  Mandelbulb.hs  Mandelbulb2.hs  Mandelbulb3.hs  MandelbulbColored.hs  MarchingCubes.hs  MarchingCubes2.hs  Metamorphose.hs  MultiPol.hs  Orthocircle.hs  OrthocircleSmooth.hs  Pilz.hs  Pretzel.hs  SpaceEgg.hs  Spikes.hs  Spikes2D.hs  Spiral.hs  SuperEllipsoid.hs  SurfaceNets.hs  Togliatti.hs  TogliattiSmooth.hs  Valentine.hs  WonderTree.hs  WonderTree2.hs
src-exe/: ExeBanchoffChmutov.hs  ExeBretzel5.hs  ExeBretzel5Colored.hs  ExeCyclide.hs  ExeDecocube.hs  ExeGoursat.hs  ExeGoursatColored.hs  ExeKusnerSchmitt.hs  ExeOrthocircle.hs  ExePilz.hs  ExePretzel.hs  ExeSpikes.hs  ExeSpikes2D.hs  ExeSpiral.hs  ExeSuperEllipsoid.hs  ExeValentine.hs  ExeWonderTree.hs  Main.hs
src/MarchingCubes/: ComputeContour3d.hs  ComputeContour3d2.hs  ComputeContour3d3.hs  OpenGL.hs  Voxel.hs
src/MarchingCubes/Utils/: Triangles.hs
src/Mesh/: ConnectedComponents.hs  ConnectedComponents2.hs  ConnectedComponents3.hs  ConnectedComponents4.hs  ConnectedComponents5.hs  Edges.hs  Normals.hs  Undup.hs
src/Utils/: Color4Unbox.hs  Misc.hs  OpenGL.hs  Palettes.hs
